Scoreboard: fixed alignment of numbers

--- a/src/styles/ui/end/Scoreboard.scss
+++ b/src/styles/ui/end/Scoreboard.scss
@@ -38,6 +38,8 @@
 .scoreboard-item {
   height: 2.5em;
   margin: 0;
+  display: flex;
+
 }
 
 .rank {
@@ -56,53 +58,62 @@
 
 .username-text {
   margin-left: 1em;
-  width: 100%;
+  width: 70%;
   font-weight: 500;
 }
 
 .points-text {
+  width: 6%;
   font-weight: 500;
+  text-align: right;
 }
 
 .change-text-over-50 {
+  width: 10%;
   white-space: nowrap;
   font-weight: 500;
   color: #ff3d3d;
+  text-align: right;
 }
 
 .change-text-over-30 {
+  width: 10%;
   white-space: nowrap;
-  margin-left: 0.3em;
   font-weight: 500;
   color: #ff6666;
+  text-align: right;
 }
 
 .change-text-over-15 {
+  width: 10%;
   white-space: nowrap;
-  margin-left: 0.3em;
   font-weight: 500;
   color: #ff9494;
+  text-align: right;
 }
 
 .change-text-over-0 {
+  width: 10%;
   white-space: nowrap;
-  margin-left: 0.3em;
   font-weight: 500;
   color: #ffbfbf;
+  text-align: right;
 }
 
 .change-text-0 {
+  width: 10%;
   white-space: nowrap;
-  margin-left: 0.3em;
   font-weight: 500;
   color: #fcc603;
+  text-align: right;
 }
 
 .change-text-under-0 {
+  width: 10%;
   white-space: nowrap;
-  margin-left: 0.3em;
   font-weight: 500;
   color: #85c771;
+  text-align: right;
 }
 
 .podium-container {
